--- a/src/br/com/formulario/view/TelaForm.form
+++ b/src/br/com/formulario/view/TelaForm.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
   </Properties>
@@ -47,7 +47,7 @@
                               </Group>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
-                              <Component id="bomHtml" min="-2" max="-2" attributes="0"/>
+                              <Component id="boxHtml" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="boxCss" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
@@ -122,7 +122,7 @@
                   <Component id="boxPhp" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="boxJava" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="boxCcha" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="bomHtml" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="boxHtml" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="159" max="-2" attributes="0"/>
@@ -206,6 +206,7 @@
         <Property name="text" type="java.lang.String" value="Front-End"/>
       </Properties>
       <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="radioFrontMouseClicked"/>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="radioFrontActionPerformed"/>
       </Events>
     </Component>
@@ -267,13 +268,16 @@
         <Property name="text" type="java.lang.String" value="Selecione as tecnologias que ultiliza:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JCheckBox" name="bomHtml">
+    <Component class="javax.swing.JCheckBox" name="boxHtml">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="14" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="HTML"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="boxHtmlActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JCheckBox" name="boxCss">
       <Properties>
@@ -396,6 +400,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Editar"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="editarMouseClicked"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="deletar">
       <Properties>
@@ -404,6 +411,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Deletar"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="deletarMouseClicked"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
